feat(npm): add build script for hybrid cjs+esm support

--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
 	"name": "@catppuccin/palette",
-	"version": "0.1.4",
-	"description": "Soothing pastel themes for the high-spirited!",
-	"main": "index.js",
-	"type": "module",
-	"exports": "./index.js",
+	"version": "0.1.5",
+    "description": "Soothing pastel themes for the high-spirited!",
+	"main": "dist/index.js",
+    "module": "dist/index.mjs",
+	"exports": {
+		".": {
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs"
+		}
+	},
 	"scripts": {
-		"test": "ava"
+		"test": "ava",
+        "build": "npm run build:cjs && npm run build:esm",
+        "build:cjs": "esbuild index.js --minify --format=cjs --outdir=dist",
+		"build:esm": "esbuild index.js --minify --format=esm --outdir=dist --out-extension:.js=.mjs",
+		"prepublishOnly": "npm run build"
 	},
 	"files": [
 		"css/",
-		"index.js",
+		"dist/index.js",
+        "dist/index.mjs",
 		"index.d.ts"
 	],
 	"types": "index.d.ts",
@@ -36,6 +46,7 @@
 	},
 	"homepage": "https://github.com/catppuccin/palette#readme",
 	"devDependencies": {
-		"ava": "^4.2.0"
+		"ava": "^4.2.0",
+		"esbuild": "^0.14.42"
 	}
 }
