--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "test": "ava",
     "build": "node esbuild.js",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "release": "standard-version"
   },
   "files": [
     "css/*",
@@ -57,6 +58,7 @@
   ],
   "devDependencies": {
     "ava": "^4.2.0",
-    "esbuild": "^0.14.42"
+    "esbuild": "^0.14.42",
+    "standard-version": "^9.5.0"
   }
 }
