feat: add machine-readable palette (#45)
* feat: add jq script for machine-readable palette

* feat: add machine-readable palette

* refactor: replace regex with jq filters

* build: add porcelain step to `package.json`

---------

Co-authored-by: winston <hey@winston.sh>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "scripts": {
     "test": "ava",
-    "build": "node esbuild.js",
+    "build:npm": "node esbuild.js",
+    "build:json": "jq -f porcelain.jq palette.json > palette-porcelain.json",
+    "build": "npm run build:npm && npm run build:json",
     "prepublishOnly": "npm run build",
     "release": "standard-version"
   },
