--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
   "devDependencies": {
     "ava": "^4.2.0",
     "esbuild": "^0.14.42",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "ts-node": "^10.9.1",
+    "tsup": "^6.7.0",
+    "typescript": "^5.0.4"
   }
 }
