--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v3
         with:
-          release-type: node
-          package-name: "@catppuccin/palette"
+          command: manifest
+
       - name: tag major and minor versions
         if: ${{ steps.release.outputs.release_created }}
         run: |
@@ -30,15 +30,38 @@ jobs:
           git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
           git push origin v${{ steps.release.outputs.major }}
           git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
+
       - uses: actions/checkout@v2
         if: ${{ steps.release.outputs.release_created }}
-      - uses: actions/setup-node@v1
+
+      - uses: denoland/setup-deno@v1
         if: ${{ steps.release.outputs.release_created }}
         with:
-          node-version: 18
-      - run: npm ci
+          deno-version: v1.x
+
+      - uses: actions/setup-node@v3
         if: ${{ steps.release.outputs.release_created }}
-      - run: npm publish
+        with:
+          node-version: lts
+
+      - name: Build NPM package
         if: ${{ steps.release.outputs.release_created }}
+        run: deno task npm
+
+      - name: Publish NPM package
+        if: ${{ steps.release.outputs.release_created }}
+        run: cd dist/npm && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+      - name: Build tar files
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          tar cf catppuccin.tar --directory=dist/palettes/ .
+
+      - name: Attach files to release
+        if: ${{ steps.release.outputs.release_created }}
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            catppuccin.tar
