feat: use color-convert instead of colormath.js

--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,5 @@
 {
+  "lock": "./deno.lock",
   "tasks": {
     "npm": "deno run -A ./scripts/build_npm.ts",
     "palette": "deno run -A ./scripts/gen_palette.ts",
