--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release Please
 
 on:
   push:
@@ -7,34 +7,49 @@ on:
 
 permissions:
   contents: write
+  id-token: write
   pull-requests: write
 
 jobs:
-  release:
+  release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: google-github-actions/release-please-action@v3
+        id: release
+        with:
+          release-type: node
+    outputs:
+      release_created: ${{ steps.release.outputs.release_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
+
+  release:
+    runs-on: ubuntu-latest
+    needs: release-please
+    if: ${{ needs.release-please.outputs.release_created }}
+    steps:
+      - uses: actions/checkout@v4
 
       - uses: nekowinston/setup-deno@v1
 
       - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
+          cache: "npm"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Build NPM package
         run: deno task npm
 
       - name: Publish NPM package
         working-directory: dist/npm
-        run: npm publish
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - name: Build tar files
-        run: tar cf catppuccin.tar --directory=dist/palettes/ .
+        run: |
+          deno task thirdparty
+          tar czf catppuccin.tar.gz --directory=dist/palettes/ .
 
       - name: Attach files to release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            catppuccin.tar
+        run: gh release upload ${{ needs.release-please.outputs.tag_name }} catppuccin.tar --clobber
