ci: fix extra-files path

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,7 +5,7 @@
       "release-type": "simple",
       "extra-files": [
         {
-          "path": "./deno.json",
+          "path": "deno.json",
           "type": "json",
           "jsonpath": "$.version"
         }
