--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -3,6 +3,12 @@ name: Release Please
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+    inputs:
+      force_release:
+        description: Force a release
+        required: true
+        type: boolean
 
 permissions:
   contents: write
@@ -22,7 +28,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: release-please
-    if: ${{ needs.release-please.outputs.release_created }}
+    if: ${{ needs.release-please.outputs.release_created || github.event.inputs.force_release }}
     steps:
       - uses: actions/checkout@v4
 
@@ -31,7 +37,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-          cache: "npm"
           registry-url: "https://registry.npmjs.org"
 
       - name: Build
