--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -9,6 +9,10 @@ on:
         description: Force a release
         required: true
         type: boolean
+      force_release_version:
+        description: Version of the release
+        required: false
+        type: string
 
 permissions:
   contents: write
@@ -51,4 +55,4 @@ jobs:
       - name: Upload the palette files
         run: |
           tar czf catppuccin.tar.gz --directory=dist/palettes/ .
-          gh release upload ${{ needs.release-please.outputs.tag_name }} catppuccin.tar --clobber
+          gh release upload ${{ needs.release-please.outputs.tag_name || inputs.force_release_version }} catppuccin.tar --clobber
