build: distribute palette as zip file as well

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -57,4 +57,5 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           tar czf catppuccin.tar.gz --directory=dist/palettes/ .
-          gh release upload ${{ needs.release-please.outputs.tag_name || inputs.force_release_version }} catppuccin.tar --clobber
+          pushd dist/palettes; zip -r "$GITHUB_WORKSPACE/catppuccin.zip" *; popd
+          gh release upload ${{ needs.release-please.outputs.tag_name || inputs.force_release_version }} catppuccin.zip catppuccin.tar --clobber
