--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,7 @@
 {
+  "name": "@catppuccin/palette",
+  "version": "1.1.0",
+  "exports": "./mod.ts",
   "importMap": "./import_map.json",
   "exclude": [
     "dist"
@@ -13,6 +16,5 @@
     "build:palettes": "deno run -A ./scripts/build_palettes.ts",
     "build": "deno task build:npm & deno task build:palettes",
     "generate": "deno run -A ./scripts/gen_palette.ts"
-  },
-  "version": "1.1.0"
+  }
 }
