ci: add publish step to JSR

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -52,6 +52,9 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
+      - name: Publish to JSR
+        run: deno publish
+
       - name: Upload the palette files
         env:
           GH_TOKEN: ${{ github.token }}
