--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -4,15 +4,6 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
-    inputs:
-      force_release:
-        description: Force a release
-        required: true
-        type: boolean
-      force_release_version:
-        description: Version of the release
-        required: false
-        type: string
 
 permissions:
   contents: write
@@ -25,6 +16,9 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
+        with:
+          config-file: .github/release-please-config.json
+          manifest-file: .github/release-please-manifest.json
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
       tag_name: ${{ steps.release.outputs.tag_name }}
@@ -32,7 +26,7 @@ jobs:
   release:
     runs-on: macos-latest
     needs: release-please
-    if: ${{ needs.release-please.outputs.release_created || github.event.inputs.force_release }}
+    if: ${{ needs.release-please.outputs.release_created }}
     steps:
       - uses: actions/checkout@v4
 
@@ -70,4 +64,4 @@ jobs:
           echo "Creating zip"
           pushd dist/palettes && zip -r "$GITHUB_WORKSPACE/catppuccin.zip" ./* && popd || exit 1
           echo "Uploading release assets"
-          gh release upload ${{ needs.release-please.outputs.tag_name || inputs.force_release_version }} catppuccin.zip catppuccin.tar.gz --clobber
+          gh release upload ${{ needs.release-please.outputs.tag_name }} catppuccin.zip catppuccin.tar.gz --clobber
